syntax = "proto3";

option java_package = "ru.clevertec.userservice.dto.proto";
option java_multiple_files = true;

message UserResponse {
  int64 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string role = 5;
  string token = 6;
  string tokenExpiration = 7;
  string createdTime = 8;
  string updatedTime = 9;
}
